bizinikiwi/pezframe/support/test/tests/pezpallet_ui/trait_no_supertrait.stderr
error: Invalid pezpallet::trait, expected explicit `pezframe_system::Config` as supertrait, found none. (try `pub trait Config: pezframe_system::Config { ...` or `pub trait Config<I: 'static>: pezframe_system::Config { ...`). To disable this check, use `#[pezpallet::disable_pezframe_system_supertrait_check]`
  --> tests/pezpallet_ui/trait_no_supertrait.rs:24:2
   |
24 |     pub trait Config {
   |     ^^^
